# stratify

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NEXT_TODO.md  README.md  ROADMAP.md
.beads/: beads.db  beads.db-shm  beads.db-wal  issues.jsonl
.claude/: settings.local.json
.github/workflows/: release.yml
archive/: ROADMAP.md
assets/steel/: OBTAINING_AISC_DATA.md
calc_cli/: Cargo.toml
calc_cli/src/: main.rs
calc_core/: Cargo.toml  build.rs  project.stf
calc_core/data/: NDS_ACTION_PLAN.md  TRANSCRIPTION_GUIDE.md
calc_core/data/wood/: sources.toml
calc_core/data/wood/engineered/: glulam_nds_supplement.toml  lvl_generic.toml  psl_generic.toml
calc_core/data/wood/engineered/manufacturer/: .gitkeep
calc_core/data/wood/sawn_lumber/: nds_2018_table4a.toml
calc_core/src/: errors.rs  file_io.rs  lib.rs  materials.rs  nds_factors.rs  pdf.rs  project.rs  section_deductions.rs  units.rs
calc_core/src/calculations/: beam.rs  beam_analysis.rs  column.rs  continuous_beam.rs  mod.rs  moment_distribution.rs
calc_core/src/equations/: EQUATIONS.md  beam.rs  mod.rs  registry.rs  section.rs
calc_core/src/loads/: combinations.rs  discrete.rs  load_types.rs  mod.rs
calc_core/src/materials/: engineered_wood.rs  lumber_sizes.rs  mod.rs  sawn_lumber.rs  steel.rs
calc_gui/: Cargo.toml  GUI_LAYOUT.md  index.html
calc_gui/src/: main.rs  update.rs
calc_gui/src/ui/: input_panel.rs  input_project_info.rs  input_wood_beam.rs  items_panel.rs  mod.rs  modal.rs  result_project_info.rs  result_wood_beam.rs  results_panel.rs  status_bar.rs  toolbar.rs
calc_gui/src/ui/shared/: diagrams.rs  divider.rs  mod.rs
docs/: hosting.md
