[package]
name = "calc_core"
description = "Structural engineering calculation engine - LLM-friendly API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# For testing

[features]
default = []
# Future: schema export for LLM integration
json-schema = []
