[package]
name = "calc_core"
description = "Structural engineering calculation engine - LLM-friendly API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gen-equations"
path = "src/bin/gen_equations.rs"

[[bin]]
name = "pdf-extractor"
path = "src/bin/pdf_extractor.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
typst = { workspace = true }
typst-pdf = { workspace = true }
typst-assets = { workspace = true }
once_cell = { workspace = true }
comemo = "0.4"
ecow = "0.2"
pdf-extract = "0.10"

# fs2 only on native targets (not WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs2 = { workspace = true }

[dev-dependencies]
# For testing

[build-dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
# Future: schema export for LLM integration
json-schema = []
