[package]
name = "calc_gui"
description = "Stratify GUI application - Iced/wgpu based"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "calc_gui"
path = "src/main.rs"

[dependencies]
calc_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
iced = { workspace = true }
rfd = "0.15"
whoami = "1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native-only dependencies

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM-only dependencies
