[package]
name = "calc_gui"
description = "Stratify GUI application - Iced/wgpu based"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "calc_gui"
path = "src/main.rs"

[dependencies]
calc_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rfd = "0.15"
whoami = "1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native: use both wgpu and tiny-skia (fallback)
iced = { version = "0.14", features = ["wgpu", "tokio", "canvas"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM: use only wgpu with WebGPU (no tiny-skia to avoid canvas context conflict)
iced = { version = "0.14", default-features = false, features = ["wgpu", "canvas", "web-colors"] }
# WASM-only dependencies - for better error reporting
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
