[package]
name = "calc_gui"
description = "Stratify GUI application - Iced/wgpu based"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "calc_gui"
path = "src/main.rs"

[dependencies]
calc_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rfd = "0.15"
whoami = "1.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native: use both wgpu and tiny-skia (fallback)
iced = { version = "0.14", features = ["wgpu", "tokio", "canvas"] }
# Update checking (native only - WASM users just refresh the page)
reqwest = { workspace = true }
semver = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM: use only wgpu with WebGPU (no tiny-skia to avoid canvas context conflict)
iced = { version = "0.14", default-features = false, features = ["wgpu", "canvas", "web-colors"] }
# getrandom needs wasm_js feature for WASM builds (transitive dep from uuid/iced)
getrandom = { version = "0.3", features = ["wasm_js"] }
# WASM-only dependencies - for better error reporting
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
# web-sys for browser download functionality
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "Url",
    "Window",
] }
js-sys = "0.3"
